--- a/index.css
+++ b/index.css
@@ -239,6 +239,10 @@ h3 {
     border: 3px solid rgb(181, 226, 240);
 }
 
+#screenshots-proj3:hover{
+    border: 3px solid rgb(221, 206, 174);
+}
+
 .projects {
     padding: 1em;
 }
