changed min-height of .top-bar to 68px

--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ nav {
 
 .top-bar {
     background-color: #416785;
-    min-height: 7vh;
+    min-height: 68px;
     overflow: hidden;
     width: 100%;
 }
